--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "npm": "6.x"
+    "node": "14.4.0"
   },
   "scripts": {
     "start": "nodemon ./bin/www",
